# Final_qualification_work

./: README.md  pyproject.toml
test_models/: run_all_tests.py  test_asr.py  test_correction.py  test_diarization.py  test_summarization.py
utils/: config.py  models.py
